!BREAKING_CHANGE : reactivate authguard

--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -2,7 +2,7 @@
     <div class=" row">
         <div class=" col-md-12">
             <div class=" card card-plain">
-                <div class=" card-header">Carte des signalementss</div>
+                <div class=" card-header">Carte des signalements</div>
                 <div class=" card-body">
                     <div class=" map" id="map"></div>
                 </div>
