--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -10,3 +10,53 @@
         </div>
     </div>
 </div>
+
+<ng-template #report_details_modal let-modal>
+    <div class="modal-header bg-dark">
+        {{ currentReport.title }}
+        <button aria-label="Close" class=" close" data-dismiss="modal" type="button" (click)="modal.dismiss('Cross click')">
+          <i class=" tim-icons icon-simple-remove"> </i>
+        </button>
+    </div>
+    <div class="modal-body bg-dark">
+        <div class="row">
+            <div class="col-md-6 font-weight-bold">Date</div>
+            <div class="col-md-6">{{ currentReport.date }}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 font-weight-bold">Description</div>
+            <div class="col-md-6">{{ currentReport.description }}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 font-weight-bold">Signaleur</div>
+            <div class="col-md-6">Jean Ba</div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">Status</div>
+            <div class="col-md-6">
+                <div ngbDropdown>
+                    <div data-toggle="dropdown" ngbDropdownToggle>
+                        <button class="btn btn-success">Nouveau</button>
+                    </div>
+                    <ul class="bg-dark" ngbDropdownMenu>
+                        <li>
+                            <button class="btn btn-danger btn-block">Nouveau</button>
+                        </li>
+                        <li>
+                            <button class="btn btn-info btn-block">En cours</button>
+                        </li>
+                        <li>
+                            <button class="btn btn-success btn-block">Fini</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">Photo</div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"><img src="./assets/img/james.jpg" alt="report-photo"></div>
+        </div>
+    </div>
+</ng-template>
