--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -28,10 +28,6 @@
             <div class="col-md-6">{{ currentReport.description }}</div>
         </div>
         <div class="row">
-            <div class="col-md-6 font-weight-bold">Signaleur</div>
-            <div class="col-md-6">Jean Ba</div>
-        </div>
-        <div class="row">
             <div class="col-md-6">Status</div>
             <div class="col-md-6">
                 <div ngbDropdown>
@@ -40,13 +36,13 @@
                     </div>
                     <ul class="bg-dark" ngbDropdownMenu>
                         <li>
-                            <button class="btn btn-danger btn-block">Nouveau</button>
+                            <button class="btn btn-danger btn-block" (click)="changeReportStatus('new')">Nouveau</button>
                         </li>
                         <li>
-                            <button class="btn btn-info btn-block">En cours</button>
+                            <button class="btn btn-info btn-block" (click)="changeReportStatus('processing')">En cours</button>
                         </li>
                         <li>
-                            <button class="btn btn-success btn-block">Fini</button>
+                            <button class="btn btn-success btn-block" (click)="changeReportStatus('done')">Fini</button>
                         </li>
                     </ul>
                 </div>
