refactor: General refactoring

--- a/src/app/pages/report-list/report-list.component.html
+++ b/src/app/pages/report-list/report-list.component.html
@@ -1,4 +1,7 @@
 <div class="content">
+    <del>Jesoa</del> Josoa ô, ataovy eto le liste des signalements
+</div>
+<!-- <div class="content">
     <div class="row">
         <div class="col-md-2">Créer un région</div>
         <div class="col-md-1">
@@ -89,4 +92,4 @@
             <button type="submit" class="btn btn-success">Créer</button>
         </form>
     </div>
-</ng-template>
+</ng-template> -->
