--- a/src/app/pages/report-list/report-list.component.html
+++ b/src/app/pages/report-list/report-list.component.html
@@ -1,36 +1,22 @@
 <div class="content">
-    <del>Jesoa</del> Josoa ô, ataovy eto le liste des signalements
-</div>
-<!-- <div class="content">
-    <div class="row">
-        <div class="col-md-2">Créer un région</div>
-        <div class="col-md-1">
-            <button class="btn btn-success" (click)="createRegion(add_region)">
-              <i class="tim-icons icon-simple-add"></i>
-            </button>
-        </div>
-    </div>
     <div class="row">
         <div class="col-md-8">
             <table class="table">
                 <thead>
                     <tr>
-                        <th class="text-center">ID</th>
-                        <th>Nom</th>
+                        <th class="text-center">Titre</th>
+                        <th>Description</th>
                         <th></th>
                     </tr>
                 </thead>
                 <tbody>
 
-                    <tr *ngFor="let region of regions; index as i">
-                        <td class="text-center">{{ region.id }}</td>
-                        <td>{{ region.name }}</td>
+                    <tr *ngFor="let report of reports; index as i">
+                        <td class="text-center">{{ report.title }}</td>
+                        <td>{{ report.description }}</td>
                         <td class="td-actions text-right">
-                            <button type="button" (click)="modifyRegion(i, modify_region)" rel="tooltip" class="btn btn-info btn-sm btn-round btn-icon">
+                            <button type="button" (click)="displayReportDetails(i)" rel="tooltip" class="btn btn-success btn-sm btn-round btn-icon">
                               <i class="tim-icons icon-pencil"></i>
-                            </button>
-                            <button type="button" (click)="deleteRegion(i)" rel="tooltip" class="btn btn-danger btn-sm btn-round btn-icon">
-                              <i class="tim-icons icon-simple-remove"></i>
                             </button>
                         </td>
                     </tr>
@@ -39,57 +25,56 @@
             </table>
         </div>
     </div>
-    <div class="row">
-        <div *ngIf="currentPage != 0" class="col-xs-6 col-sm-6 col-md-4">
-            <button type="button" class="btn btn-success text-left" (click)="previousPage()">
-              <i class=" tim-icons icon-double-left"> </i>
-            </button> Page précedente
-        </div>
-        <div *ngIf="currentPage != (pageNumber-1)" class="col-xs-6 col-sm-6 col-md-4">
-            Page suivante
-            <button type="button" class="btn btn-success text-right" (click)="nextPage()">
-              <i class=" tim-icons icon-double-right"> </i>
-            </button>
-        </div>
-    </div>
 </div>
 
-<ng-template #modify_region let-modal>
+<ng-template #report_details_modal let-modal>
     <div class="modal-header bg-dark">
-        Modifier {{ actualRegion.name }}
+        {{ currentReport.title }}
         <button aria-label="Close" class=" close" data-dismiss="modal" type="button" (click)="modal.dismiss('Cross click')">
         <i class=" tim-icons icon-simple-remove"> </i>
       </button>
     </div>
     <div class="modal-body bg-dark">
-        <form (ngSubmit)="executeModifyRegion(modifyRegionForm)" role="form" #modifyRegionForm="ngForm">
-            <div class="form-group">
-                <label for="region_name">Nom</label>
-                <input type="text" class="form-control" id="region_name" name="region_name" ngModel>
+        <div class="row">
+            <div class="col-md-6 font-weight-bold">Date</div>
+            <div class="col-md-6">{{ currentReport.date }}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 font-weight-bold">Description</div>
+            <div class="col-md-6">{{ currentReport.description }}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">Status</div>
+            <div class="col-md-6">
+                <div ngbDropdown>
+                    <div data-toggle="dropdown" ngbDropdownToggle>
+                        <button class="btn btn-success">Nouveau</button>
+                    </div>
+                    <ul class="bg-dark" ngbDropdownMenu>
+                        <li>
+                            <button class="btn btn-danger btn-block" (click)="changeReportStatus('new')">Nouveau</button>
+                        </li>
+                        <li>
+                            <button class="btn btn-info btn-block" (click)="changeReportStatus('processing')">En cours</button>
+                        </li>
+                        <li>
+                            <button class="btn btn-success btn-block" (click)="changeReportStatus('done')">Fini</button>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary">Modifier</button>
-        </form>
+        </div>
+        <div class="row">
+            <div class="col-md-12">Photo</div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <img [src]="imageToShow" class="card-img-top" alt="Photo" height="250" width="200" *ngIf="!isImageLoading; else noImageFound">
+            </div>
+        </div>
     </div>
 </ng-template>
 
-<ng-template #add_region let-modal>
-    <div class="modal-header bg-dark">
-        Créer un région
-        <button aria-label="Close" class=" close" data-dismiss="modal" type="button" (click)="modal.dismiss('Cross click')">
-      <i class=" tim-icons icon-simple-remove"> </i>
-    </button>
-    </div>
-    <div class="modal-body bg-dark">
-        <form (ngSubmit)="addRegion(createRegionForm)" role="form" #createRegionForm="ngForm">
-            <div class="form-group">
-                <label for="">Nom</label>
-                <input type="text" class="form-control" id="region_name" name="region_name" ngModel>
-            </div>
-            <div class="form-group">
-                <label for="">Mot de passe</label>
-                <input type="password" class="form-control" id="region_password" name="region_password" ngModel>
-            </div>
-            <button type="submit" class="btn btn-success">Créer</button>
-        </form>
-    </div>
-</ng-template> -->
+<ng-template #noImageFound>
+    <img data-src="holder.js/100px180/" alt="Photo" />
+</ng-template>
