--- a/src/app/pages/report-list/report-list.component.html
+++ b/src/app/pages/report-list/report-list.component.html
@@ -43,10 +43,7 @@
             </div>
             <div class="form-group">
                 <select name="category" id="category" class="form-control bg-dark">
-                  <option value="rano">Rano</option>
-                  <option value="Jiro">Jiro</option>
-                  <option value="rano">Rano</option>
-                  <option value="Jiro">Jiro</option>
+                  <option *ngFor="let category of reportCategories" [value]="category">{{category}}</option>
                 </select>
             </div>
             <button type="submit" class="btn btn-success"><i class=" tim-icons icon-zoom-split"></i></button>
