--- a/src/app/pages/report-list/report-list.component.html
+++ b/src/app/pages/report-list/report-list.component.html
@@ -12,6 +12,7 @@
             <table class="table">
                 <thead>
                     <tr>
+                        <th>Date</th>
                         <th class="text-center">Titre</th>
                         <th>Description</th>
                         <th></th>
@@ -20,6 +21,7 @@
                 <tbody>
 
                     <tr *ngFor="let report of reports; index as i">
+                        <td>{{report.date | date : 'dd-MM-yyyy'}}</td>
                         <td class="text-center">{{ report.title }}</td>
                         <td>{{ report.description }}</td>
                         <td class="td-actions text-right">
@@ -79,7 +81,7 @@
     <div class="modal-body bg-dark">
         <div class="row">
             <div class="col-md-6 font-weight-bold">Date</div>
-            <div class="col-md-6">{{ currentReport.date }}</div>
+            <div class="col-md-6">{{ currentReport.date | date : 'dd-MM-yyyy' }}</div>
         </div>
         <div class="row">
             <div class="col-md-6 font-weight-bold">Description</div>
